fix Rows, test on mobile phone.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -34,4 +34,8 @@ button img {
 button {
     padding: 3px;
 }
-/**/
+/*add spacing betwwen rows test it Navah!*/ 
+#row1, #row2 {
+    gap: 10px;
+    align-items: center;
+}
